--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مدون | أداة تفريغ الملفات الصوتية البرمجية الاحترافية</title>
-    <meta name="description" content="أفضل موقع عربي لتفريغ الملفات الصوتية يدوياً وآلياً عبر المتصفح. يدعم تصدير الملفات بصيغة Word و PDF مع ميزات برمجية متطورة للباحثين والمترجمين.">
-    <meta name="keywords" content="تفريغ صوتي, تحويل الصوت لنص, مفرغ صوتي, تفريغ ملفات وورد, تفريغ يدوي, أدوات المترجمين">
+    <title>مدون | المنصة العربية الاحترافية للتفريغ الصوتي التلقائي</title>
+    <meta name="description" content="قم بتفريغ ملفاتك الصوتية إلى نصوص فوراً وبدقة عالية. مدون يستخدم تقنيات برمجية متطورة لتحويل الصوت إلى نصوص مجاناً مع دعم كامل للعربية وتصدير ملفات وورد و PDF.">
+    <meta name="keywords" content="تفريغ صوتي, تحويل الصوت لنص, مفرغ صوتي تلقائي, تفريغ ملفات وورد, تفريغ ملفات PDF, تحويل MP3 لنص">
     
     <!-- Open Graph / SEO -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="مدون - منصة التفريغ الصوتي الاحترافية">
-    <meta property="og:description" content="تفريغ الملفات الصوتية برمجياً وبدقة عالية دون الحاجة لذكاء اصطناعي خارجي.">
+    <meta property="og:title" content="مدون - تفريغ صوتي احترافي">
+    <meta property="og:description" content="أسرع أداة عربية لتفريغ الملفات الصوتية برمجياً دون الحاجة لذكاء اصطناعي خارجي.">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -24,6 +24,16 @@
             fontFamily: {
               sans: ['Tajawal', 'sans-serif'],
             },
+            colors: {
+              brand: {
+                50: '#f0f7ff',
+                100: '#e0effe',
+                500: '#3b82f6',
+                600: '#2563eb',
+                700: '#1d4ed8',
+                900: '#1e3a8a',
+              }
+            }
           },
         },
       }
@@ -34,31 +44,35 @@
         background-color: #f8fafc;
       }
       .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
+        width: 8px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
-        background: transparent;
+        background: #f1f5f9;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #e2e8f0;
+        background: #cbd5e1;
         border-radius: 10px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #cbd5e1;
+        background: #94a3b8;
       }
-      @keyframes pulse-ring {
-        0% { transform: scale(.33); }
-        80%, 100% { opacity: 0; }
+      @keyframes ripple {
+        0% { box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.4); }
+        70% { box-shadow: 0 0 0 15px rgba(239, 68, 68, 0); }
+        100% { box-shadow: 0 0 0 0 rgba(239, 68, 68, 0); }
       }
-      .mic-active::before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: #ef4444;
-        border-radius: 50%;
-        z-index: -1;
-        animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+      .recording-pulse {
+        animation: ripple 1.5s infinite;
+      }
+      @keyframes shimmer {
+        0% { transform: translateX(100%); }
+        100% { transform: translateX(-100%); }
+      }
+      .animate-shimmer {
+        animation: shimmer 2s infinite linear;
+      }
+      .gradient-bg {
+        background: linear-gradient(135deg, #1e3a8a 0%, #2563eb 100%);
       }
     </style>
 <script type="importmap">
@@ -68,7 +82,8 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "jspdf": "https://esm.sh/jspdf@^3.0.4"
+    "jspdf": "https://esm.sh/jspdf@^3.0.4",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
